--- a/students/nikkivanartsdalen/css/styles.css
+++ b/students/nikkivanartsdalen/css/styles.css
@@ -4,20 +4,25 @@ body {
 
 p {
     color: #545455;
-    font-family: Arial, Helvetica, sans-serif;  
+    font-family: Arial, Helvetica, sans-serif; 
+    padding: 1em;
 }
 
 h1 {
+    font-family: Arial, Helvetica, sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
+    color: white;
 }
 
 h2 {
+    font-family: Arial, Helvetica, sans-serif;
     text-transform: uppercase;
     letter-spacing: 1px; 
 }
 
 a {
+    font-family: Arial, Helvetica, sans-serif;
     color: #FC77AC;
     text-decoration: none;
 }
@@ -32,9 +37,39 @@ a:active {
 }
 
 img {
-    border-radius: 10px;
+    border-radius: 2em;
+    margin: 1em;
 }
 
 header {
-    background-image: url("../images/header.jpg");
+    background-image: 
+        linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), 
+        url("../images/header.jpg");
+    padding: 10px;
+}
+
+nav ul li{
+    list-style: none;
+    background-color: black;
+    left: 0;
+    display: inline-block;
+    margin: 5px;
+    border-radius: 1em;
+}
+
+nav a:hover {
+    color: black;
+}
+
+nav a {
+    text-transform: uppercase;
+    color: white;
+    font-size: 1em;
+    display: inline-block;
+    line-height: 2em;
+    width: 100%;
+    padding: 10px;
+
+
+
 }
